--- a/src/apps/ui/v2/src/components/ScoreBoard/ScoreBoard.css
+++ b/src/apps/ui/v2/src/components/ScoreBoard/ScoreBoard.css
@@ -28,6 +28,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
+  box-shadow: 5px 0 0 0 rgba(161, 148, 148, 0.473);
 }
 .memberItem:nth-of-type(odd) {
   background-color: #40885c;
