--- a/src/apps/ui/v2/src/components/ScoreBoard/ScoreBoard.css
+++ b/src/apps/ui/v2/src/components/ScoreBoard/ScoreBoard.css
@@ -3,13 +3,9 @@
 /* } */
 
 .scoreBoard {
-  position: absolute;
-  right: 5px;
-  top: 5px;
   border-collapse: collapse;
   font-size: 0.9em;
-  font-family: sans-serif;
-  min-width: 200px;
+  font-family: 'Courier New', Courier, monospace;
   box-shadow: 0 0 20px rgba(161, 148, 148, 0.473);
 }
 
@@ -17,7 +13,8 @@
   color: rgb(241, 235, 235);
   text-align: center;
   padding: 8px;
-  font-style: italic;
+  font-weight: bold;
+  font-variant: small-caps;
   font-size: 1.2rem;
   box-shadow: 0 10px 0 rgba(161, 148, 148, 0.473);
 }
